--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "hyperf/logger": "~3.1.0",
         "hyperf/memory": "~3.1.0",
         "hyperf/process": "~3.1.0",
+        "hyperf/validation": "^3.1",
         "symfony/dependency-injection": "^7.0"
     },
     "require-dev": {
